Fixed .logo class on small displays

--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ footer div:first-child {
     padding: .2em 0;
   }
 
-  #logo {
+  .logo {
     margin: 1em auto 2em auto;
     display: block;
     float: none;
